adiciono entidades y reglas de negocio